------------------------------------------------------
PortableCrafting-1.9-1.0
------------------------------------------------------
- Add clickable arrow to JEI.
------------------------------------------------------
PortableCrafting-1.9-1.0
------------------------------------------------------
- Initial port to 1.9! Credit to Awkanic for starting this process.
- Fixed some minor bugs that arose from the port such as swapping items into the offhand and scaling of the models. Still work to do, but it's a good intro to 1.9 modding.
------------------------------------------------------
PortableCrafting-1.8.9-1.1
------------------------------------------------------
- Fixed textures not appearing for the crafting core and the blueprints (Closes #1)
- Changed it so the reequip animation isn't shown (i.e. no portable crafter item bobbing up and down in the player's hands)
- Changed default keybinding of opening portable crafter to 'x'
------------------------------------------------------
PortableCrafting-1.8.9-1.0
------------------------------------------------------
- Initial Release
    - Added Portable Crafter
    - Added Blueprints and Crafting Core
    - Various tweaks, optimizations, and changes.