@@ -1,0 +1,22 @@
+package com.gr8pefish.portablecrafting.items.craftingBenches;
+
+import net.minecraft.tileentity.TileEntity;
+import net.minecraft.util.EnumFacing;
+import net.minecraftforge.common.capabilities.Capability;
+import net.minecraftforge.items.CapabilityItemHandler;
+import net.minecraftforge.items.ItemStackHandler;
+
+public class TestTile extends TileEntity {
+
+    @Override
+    public boolean hasCapability(Capability<?> cap, EnumFacing side) {
+        return cap == CapabilityItemHandler.ITEM_HANDLER_CAPABILITY || super.hasCapability(cap, side);
+    }
+
+    @Override
+    public <T> T getCapability(Capability<T> cap, EnumFacing side) {
+        if(cap == CapabilityItemHandler.ITEM_HANDLER_CAPABILITY)
+            return (T) new ItemStackHandler(8);
+        return super.getCapability(cap, side);
+    }
+}
